--- a/boston.erb
+++ b/boston.erb
@@ -9,22 +9,16 @@
         The massive skyscrapers filled with diverse stores is s great place to shop,
         and the  silhouette of the building looks over the city. Once you are done shopping, feel free to take 
         and elevator to the top of the building, and eat at the Top of the Hub restaurant, while overlooking the city.</p>
-        <img src="http://www.aviewoncities.com/img/boston/kveus3228s.jpg"/>
         <a href ="http://www.prudentialcenter.com/">Prudential Center Website</a>
-        
-        
+        <img src="http://www.aviewoncities.com/img/boston/kveus3228s.jpg"
 
 <br>
         <p> This is Newbury Street. This street in Boston hosts manu high end shopping locations, and has stores 
         such as Dolce and Gabbana, Marc Jacobs, Chanel, Burberrry, and Girgio Armani. 
         In addition, the shopping hub has many places for afforciable shopping, such as Brandy Melville, Forever 21, Francescas, and even TJ Maxx. </p>
-        <img src="https://s-media-cache-ak0.pinimg.com/originals/2c/f2/ba/2cf2ba58187dd5244e5f6c2387b8e3b1.jpg"/>
         <a href="http://www.newbury-st.com/">Newbury Street Website</a>
-        
-        
+        <img src="https://s-media-cache-ak0.pinimg.com/originals/2c/f2/ba/2cf2ba58187dd5244e5f6c2387b8e3b1.jpg"
 <br>
-
-
 
 <p>  Although Boston has many great shopping centers, one charm of the New England City is finding many of the small shops that are located all around the city.
   Many of these shops don't have websites so it can be hard to find them, but the adorbale boutuques are a great aspect of Boston to look for while you are walking around the Scenic town.</p>     
@@ -34,4 +28,3 @@
   
   </body>
 </html>
-
